add finish session endpoint
