# services/service-auth/internal/app/usecases/finish_session/dto/dto.go
@@ -1,0 +1,8 @@
+package dto
+
+import "github.com/art-es/b2b-usage-based-billing-platform/services/service-auth/internal/app/domains/jwt"
+
+type Request struct {
+	Auth      *jwt.Claims
+	SessionID string
+}
